--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@
   }emailjs.send("default_service", "template_sjk35x1", { email: email })
   .then(function(response) {
     console.log("Email sent successfully:", response);
-    alert('Thank you for subscribing!');
+   // alert('Thank you for subscribing!');
   })
   .catch(function(error) {
     console.error("Email failed to send:", error);
