Subscription failure commented

--- a/index.html
+++ b/index.html
@@ -1261,7 +1261,7 @@
         })
         .catch(function(error) {
           console.error("Email failed to send:", error);
-          alert('Subscription failed. Please try again.');
+          //alert('Subscription failed. Please try again.');
         });
     } else {
       // Handle invalid email address
