--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,7 @@
   })
   .catch(function(error) {
     console.error("Email failed to send:", error);
-    alert('Subscription failed. Please try again.');
+  //  alert('Subscription failed. Please try again.');
   });
 </script>
 
